--- a/pod_app/Makefile
+++ b/pod_app/Makefile
@@ -1,8 +1,5 @@
-SGX_SDK ?= /opt/intel/sgxsdk
-SGX_SSL ?= /opt/intel/sgxssl
-SGX_SSL_LIB ?= $(SGX_SSL)/lib64
-SGX_INC ?= $(SGX_SDK)/include
-SGX_LIB ?= $(SGX_SDK)/lib64
+APP_BIN ?= pod_app
+PREFIX ?= /usr/local
 
 ifeq ($(DEBUG), 1)
 	CFLAGS := -O0 -g
@@ -11,25 +8,28 @@ else
 endif
 
 .PHONY: all
-all: pod_app
+all: $(APP_BIN)
 
-CFLAGS += -fPIC -Wno-attributes -Wall -Wextra -std=c99 -m64 -D_GNU_SOURCE \
-	-I$(SGX_INC) -I../pod_enclave
+CFLAGS += -Wall \
+    -Wextra \
+    -std=c99 \
+    -m64 \
+    -D_GNU_SOURCE \
+    -I../pod_library
 
-LDFLAGS := -lcrypto \
-	-L$(SGX_LIB) -lsgx_urts -lsgx_uae_service \
-	-L$(SGX_SSL_LIB) -lsgx_usgxssl
+LDFLAGS := -L../pod_library \
+           -lpod_sgx
 
-# Main executable
-pod_app: pod_app.o pod_enclave_u.o
+$(APP_BIN): pod_app.o
 	$(CC) $^ $(LDFLAGS) -o $@
 
 pod_app.o: pod_app.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-pod_enclave_u.o: ../pod_enclave/pod_enclave_u.c
-	$(CC) $(CFLAGS) -c $< -o $@
+.PHONY: install
+install:
+	install $(APP_BIN) ${PREFIX}/bin
 
 .PHONY: clean
 clean:
-	$(RM) *.o *.so pod_app
+	$(RM) *.o $(APP_BIN)
