--- a/server/crates/rust-sgx-util/Cargo.toml
+++ b/server/crates/rust-sgx-util/Cargo.toml
@@ -3,6 +3,12 @@ name = "rust-sgx-util"
 version = "0.1.0"
 authors = ["Jakub Konka <jakub.konka@golem.network>"]
 edition = "2018"
+license = "LGPL-3.0"
+readme = "README.md"
+repository = "https://github.com/golemfactory/proofofdevice"
+homepage = "https://github.com/golemfactory/proofofdevice"
+documentation = "https://docs.rs/rust-sgx-util"
+description = "A safe wrapper around Graphene `sgx-util` C-library."
 
 [dependencies]
 libc = "0.2"
@@ -11,3 +17,6 @@ thiserror = "1"
 [dev-dependencies]
 structopt = "0.3"
 anyhow = "1"
+
+[badges]
+maintenance = { status = "actively-developed" }
