--- a/pod-server/crates/rust-sgx-util/Cargo.toml
+++ b/pod-server/crates/rust-sgx-util/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-sgx-util"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Jakub Konka <jakub.konka@golem.network>"]
 edition = "2018"
 license = "LGPL-3.0"
@@ -13,6 +13,7 @@ description = "A safe wrapper around Graphene `sgx-util` C-library."
 [dependencies]
 libc = "0.2"
 thiserror = "1"
+serde = { version = "1", features = ["derive"], optional = true}
 
 [dev-dependencies]
 structopt = "0.3"
