--- a/pod-server/Cargo.toml
+++ b/pod-server/Cargo.toml
@@ -16,7 +16,7 @@ rust-sgx-util = { path = "crates/rust-sgx-util", features = ["serde"], version =
 anyhow = "1"
 serde = "1"
 log = "0.4"
-env_logger = "0.6"
+pretty_env_logger = "0.4"
 structopt = "0.3"
 toml = "0.5"
 
