--- a/pod-server/Cargo.toml
+++ b/pod-server/Cargo.toml
@@ -19,6 +19,10 @@ log = "0.4"
 pretty_env_logger = "0.4"
 structopt = "0.3"
 toml = "0.5"
+tokio = { version = "0.2", features = ["blocking"] }
+diesel = { version = "1.0", features = ["sqlite"] }
+tokio-diesel = "0.3"
+dotenv = "0.9"
 
 [badges]
 maintenance = { status = "actively-developed" }
