--- a/pod-server/Cargo.toml
+++ b/pod-server/Cargo.toml
@@ -14,15 +14,18 @@ actix-web = "2"
 actix-rt = "1"
 rust-sgx-util = { path = "crates/rust-sgx-util", features = ["serde"], version = "0.1.1" }
 anyhow = "1"
+thiserror = "1"
 serde = "1"
+serde_json = "1"
 log = "0.4"
 pretty_env_logger = "0.4"
 structopt = "0.3"
 toml = "0.5"
-tokio = { version = "0.2", features = ["blocking"] }
+tokio = { version = "0.2", features = ["blocking", "time"] }
 diesel = { version = "1.0", features = ["sqlite"] }
 tokio-diesel = "0.3"
 dotenv = "0.9"
+futures = "0.3" 
 
 [badges]
 maintenance = { status = "actively-developed" }
