--- a/pod-server/Cargo.toml
+++ b/pod-server/Cargo.toml
@@ -12,6 +12,8 @@ description = "An implementation of proof-of-device web server."
 [dependencies]
 actix-web = "2"
 actix-rt = "1"
+actix-session = "0.3"
+actix-redis = { version = "0.8", features = ["web"] }
 rust-sgx-util = { path = "crates/rust-sgx-util", features = ["serde"], version = "0.1.1" }
 anyhow = "1"
 thiserror = "1"
@@ -26,6 +28,9 @@ diesel = { version = "1.0", features = ["sqlite"] }
 tokio-diesel = "0.3"
 dotenv = "0.9"
 futures = "0.3" 
+getrandom = "0.1"
+base64 = "0.12"
+ed25519-dalek = "1.0.0-pre.3"
 
 [badges]
 maintenance = { status = "actively-developed" }
