--- a/pod-server/crates/rust-sgx-util/Cargo.toml
+++ b/pod-server/crates/rust-sgx-util/Cargo.toml
@@ -14,10 +14,15 @@ description = "A safe wrapper around Graphene `sgx-util` C-library."
 libc = "0.2"
 thiserror = "1"
 serde = { version = "1", features = ["derive"], optional = true}
+base64 =  { version = "0.12", optional = true }
 
 [dev-dependencies]
 structopt = "0.3"
 anyhow = "1"
+
+[features]
+default = []
+with_serde = ["serde", "base64"]
 
 [badges]
 maintenance = { status = "actively-developed" }
