--- a/pod-server/Cargo.toml
+++ b/pod-server/Cargo.toml
@@ -13,6 +13,7 @@ description = "An implementation of proof-of-device web server."
 actix-web = "2"
 actix-rt = "1"
 actix-session = "0.3"
+actix-identity = "0.2"
 rust-sgx-util = { path = "crates/rust-sgx-util", features = ["with_serde"], version = "0.1.1" }
 anyhow = "1"
 thiserror = "1"
@@ -28,6 +29,7 @@ tokio-diesel = "0.3"
 dotenv = "0.9"
 futures = "0.3" 
 getrandom = "0.1"
+rand = "0.7"
 base64 = "0.12"
 ed25519-dalek = "1.0.0-pre.3"
 
