--- a/crates/c-api/pod-lib/Makefile
+++ b/crates/c-api/pod-lib/Makefile
@@ -23,7 +23,7 @@ CFLAGS += -fPIC \
     -m64 \
     -D_GNU_SOURCE \
     -I$(SGX_INC) \
-    -I../pod_enclave
+    -I../pod-enclave
 
 LDFLAGS := -lcrypto \
     -L$(SGX_LIB) -lsgx_urts -lsgx_uae_service \
@@ -37,7 +37,7 @@ $(LIBRARY_BIN): pod_sgx.o pod_enclave_u.o
 pod_sgx.o: pod_sgx.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-pod_enclave_u.o: ../pod_enclave/pod_enclave_u.c
+pod_enclave_u.o: ../pod-enclave/pod_enclave_u.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 .PHONY: install
