--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 
 [dependencies]
 pod-api = { path = "crates/api", version = "0.1.0" }
-rust-sgx-util = { path = "crates/rust-sgx-util", version = "0.2.3" }
+rust-sgx-util = { path = "crates/rust-sgx-util", features = ["with_serde"], version = "0.2.3" }
+anyhow = "1"
+base64 = "0.12"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
