--- a/crates/c-api/pod-lib/Makefile
+++ b/crates/c-api/pod-lib/Makefile
@@ -23,7 +23,7 @@ CFLAGS += -fPIC \
     -m64 \
     -D_GNU_SOURCE \
     -I$(SGX_INC) \
-    -I../pod-enclave
+    -I../pod-enclave 
 
 LDFLAGS := -lcrypto \
     -L$(SGX_LIB) -lsgx_urts -lsgx_uae_service \
@@ -31,10 +31,13 @@ LDFLAGS := -lcrypto \
     -shared
 
 # Main binary
-$(LIBRARY_BIN): pod_sgx.o pod_enclave_u.o
+$(LIBRARY_BIN): pod_sgx.o pod_log.o pod_enclave_u.o
 	$(CC) $^ $(LDFLAGS) -o $@
 
 pod_sgx.o: pod_sgx.c
+	$(CC) $(CFLAGS) -c $< -o $@
+
+pod_log.o: pod_log.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 pod_enclave_u.o: ../pod-enclave/pod_enclave_u.c
