--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,20 @@ anyhow = "1"
 base64 = "0.12"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+structopt = "0.3"
+log = "0.4"
+futures = "0.3"
+pretty_env_logger = "0.4"
+
+[dependencies.tokio]
+version = "0.2"
+features = [
+  "io-util",
+  "io-std",
+  "rt-core",
+  "macros",
+  "signal"
+]
 
 [badges]
 maintenance = { status = "actively-developed" }
