Build c-api using cargo as part of pod-app
This commit obsoletes the necessity to build `c-api` manually
using the provided Makefile. It also builds the C lib as a static
archive which is then baked in into the final `pod-app` binary.

--- a/pod-app/Cargo.toml
+++ b/pod-app/Cargo.toml
@@ -16,6 +16,13 @@ structopt = "0.3"
 nix = "0.17"
 libc = "0.2"
 
+[dev-dependencies]
+actix-web = "2"
+actix-rt = "1"
+
+[build-dependencies]
+cc = "1"
+
 [badges]
 maintenance = { status = "actively-developed" }
 
