--- a/pod-web/package.json
+++ b/pod-web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pod-front",
   "version": "0.1.0",
-  "author": "Muhammed Tanrikulu <muhammed@golem.network>"
+  "author": "Muhammed Tanrikulu <muhammed@golem.network>",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
