Update installation script for manifest + update manifest files

--- a/pod-app/assets/pod_app.json
+++ b/pod-app/assets/pod_app.json
@@ -1,7 +1,7 @@
 {
   "name": "pod_app",
   "description": "Proof-of-device native client",
-  "path": "<path_to_app>/pod_app",
+  "path": "NATIVE_APP_PATH",
   "type": "stdio",
   "allowed_extensions": [ "pod_app@golem.network" ],
   "allowed_origins": [ "pod_app@golem.network" ]
