--- a/pod-server/Cargo.toml
+++ b/pod-server/Cargo.toml
@@ -20,7 +20,6 @@ thiserror = "1"
 serde = "1"
 serde_json = "1"
 log = "0.4"
-pretty_env_logger = "0.4"
 structopt = "0.3"
 toml = "0.5"
 diesel = { version = "1.0", features = ["sqlite"] }
@@ -29,6 +28,7 @@ dotenv = "0.9"
 getrandom = "0.1"
 base64 = "0.12"
 ed25519-dalek = "1.0.0-pre.3"
+simplelog = "0.7"
 
 [badges]
 maintenance = { status = "actively-developed" }
