Refactor readmes and licensing

--- a/lib/api/Cargo.toml
+++ b/lib/api/Cargo.toml
@@ -3,6 +3,11 @@ name = "pod-api"
 version = "0.1.0"
 authors = ["Jakub Konka <jakub.konka@golem.network>"]
 edition = "2018"
+license = "LGPL-3.0"
+readme = "README.md"
+repository = "https://github.com/golemfactory/proofofdevice"
+homepage = "https://github.com/golemfactory/proofofdevice"
+description = "Idiomatic Rust API for managing the pod-enclave."
 
 [dependencies]
 anyhow = "1"
