--- a/pod-app/Cargo.toml
+++ b/pod-app/Cargo.toml
@@ -3,6 +3,11 @@ name = "pod-app"
 version = "0.1.0"
 authors = ["Jakub Konka <jakub.konka@golem.network>"]
 edition = "2018"
+license = "LGPL-3.0"
+readme = "README.md"
+repository = "https://github.com/golemfactory/proofofdevice"
+homepage = "https://github.com/golemfactory/proofofdevice"
+description = "Native app that PoD uses to interface with pod-enclave"
 
 [dependencies]
 pod-api = { path = "../lib/api", version = "0.1.0" }
