--- a/pod-server/Cargo.toml
+++ b/pod-server/Cargo.toml
@@ -7,7 +7,7 @@ license = "LGPL-3.0"
 readme = "README.md"
 repository = "https://github.com/golemfactory/proofofdevice"
 homepage = "https://github.com/golemfactory/proofofdevice"
-description = "An implementation of proof-of-device web server."
+description = "Implementation of PoD web server."
 
 [dependencies]
 actix-web = "2"
